crates/ir/tests/snapshots/lower_test__modules__prelude_auto.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__prelude_auto

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn test_option() -> Option[Int] =
  let v0: ~Option[Int] = construct Option::Some#0(42)
  v0

fn test_list() -> List[Int] =
  let v1: ~List[Int] = construct List::Nil#1()
  let v2: ~List[Int] = construct List::Cons#0(2, v1)
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  v3

fn test_result() -> Result[String, Int] =
  let v4: ~Result[String, Int] = construct Result::Ok#0(42)
  v4

fn test_ordering() -> Ordering =
  let v5: ~Ordering = construct Ordering::LT#0()
  v5

fn main() -> Option[Int] =
  let v6: Option[Int] = call test_option()
  v6
