crates/ir/tests/snapshots/lower_test__modules__resolved_ref_sum_consumer.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__resolved_ref_sum_consumer

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/io/println as println(s): Unit
import resolved_ref_sum_lib/Keep as Keep(Int): Packet
declare println: (s) -> Unit

fn render(v0: Packet) -> Int =
  switch v0 {
    0 (v1: Int) ->
      let v2: Int = add_int(v1, 1)
      v2
    1 ->
      0
  }

fn main() -> Unit =
  let v4: ~Packet = construct Packet::Keep#0(8)
  let v5: Int = call render(v4)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
